# awgram

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  deny.toml  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deny.yml  release.yml
deploy/: awg-bot.service  awgram.service  config.example.toml
docs/superpowers/plans/: 2026-07-10-awg-bot-features-v2.md  2026-07-10-awg-telegram-bot.md  2026-07-11-duplicate-client-guard.md  2026-07-14-manage-parity.md
docs/superpowers/specs/: 2026-07-10-awg-bot-features-v2-design.md  2026-07-10-awg-telegram-bot-design.md  2026-07-11-duplicate-client-guard-design.md  2026-07-14-manage-parity-design.md
scripts/: build-musl.sh  test-install-inner.sh  test-install.sh
src/: auth.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  settings.rs
src/bot/: handlers.rs  menu.rs  mod.rs  render.rs
src/vpn/: mod.rs  model.rs  runner.rs  validate.rs  wire.rs
tests/: runner_integration.rs
