[package]
name = "awgram"
version = "0.1.0"
edition = "2021"
description = "Telegram bot for managing AmneziaWG VPN clients"
license = "MIT"
repository = "https://github.com/ekuraev/awgram"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
# Символы срезает rustc при линковке — работает и при кросс-сборке,
# где бинарный strip чужой архитектуры недоступен.
strip = "symbols"
